Bug 457344 - Crash while editing python
Summary: Crash while editing python
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-07-31 14:59 UTC by Allen Winter
Modified: 2022-08-11 12:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Allen Winter 2022-07-31 14:59:43 UTC
Some combination of button presses while editing a python file caused a crash.

Here't the bt:

Program terminated with signal SIGABRT, Aborted.
#0  0x00007f141c844c4c in __pthread_kill_implementation () from /usr/lib64/libc.so.6
[Current thread is 1 (Thread 0x7f14188e2580 (LWP 175251))]
#0  0x00007f141c844c4c in __pthread_kill_implementation () from /usr/lib64/libc.so.6
#1  0x00007f141c7f49c6 in raise () from /usr/lib64/libc.so.6
#2  0x00007f141c7de7f4 in abort () from /usr/lib64/libc.so.6
#3  0x00007f141cd9d4f5 in QMessageLogger::fatal(char const*, ...) const () from /usr/lib64/libQt5Core.so.5
#4  0x00007f141cd9c838 in qt_assert(char const*, char const*, int) () from /usr/lib64/libQt5Core.so.5
#5  0x00007f141fd12e63 in QString::operator[] (this=0x7ffdea72c7c0, i=-1) at /usr/include/qt5/QtCore/qstring.h:1339
#6  0x00007f140855ef6b in KatePluginSymbolViewerView::parsePythonSymbols (this=0x28339a0) at /data/KDE/src/kde/utilities/kate/addons/symbolviewer/python_parser.cpp:66
#7  0x00007f1408565592 in KatePluginSymbolViewerView::parseSymbols (this=0x28339a0) at /data/KDE/src/kde/utilities/kate/addons/symbolviewer/plugin_katesymbolviewer.cpp:347
#8  0x00007f140856b9b0 in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (KatePluginSymbolViewerView::*)()>::call(void (KatePluginSymbolViewerView::*)(), KatePluginSymbolViewerView*, void**) (f=(void (KatePluginSymbolViewerView::*)(KatePluginSymbolViewerView * const)) 0x7f1408565238 <KatePluginSymbolViewerView::parseSymbols()>, o=0x28339a0, arg=0x7ffdea72ccc0) at /usr/include/qt5/QtCore/qob
jectdefs_impl.h:152
#9  0x00007f140856b470 in QtPrivate::FunctionPointer<void (KatePluginSymbolViewerView::*)()>::call<QtPrivate::List<>, void>(void (KatePluginSymbolViewerView::*)(), KatePluginSymbolViewerView*, void**) (f=(void (KatePluginSymbolViewerView::*)(KatePluginSymbolViewerView * const)) 0x7f1408565238 <KatePluginSymbolViewerView::parseSymbols()>, o=0x28339a0, arg=0x7ffdea72ccc0) at /usr/include/qt5/QtCore/qobjectdefs_impl.h:185
#10 0x00007f140856a9e7 in QtPrivate::QSlotObject<void (KatePluginSymbolViewerView::*)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) (which=1, this_=0x29d1130, r=0x28339a0, a=0x7ffdea72ccc0, ret=0x0) at /usr/include/qt5/QtCore/qobjectdefs_impl.h:418
#11 0x00007f141cfc78c6 in void doActivate<false>(QObject*, int, void**) () from /usr/lib64/libQt5Core.so.5
#12 0x00007f141cfcac5e in QTimer::timeout(QTimer::QPrivateSignal) () from /usr/lib64/libQt5Core.so.5
#13 0x00007f141cfbe155 in QObject::event(QEvent*) () from /usr/lib64/libQt5Core.so.5
#14 0x00007f141dc07d22 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#15 0x00007f141cf94228 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib64/libQt5Core.so.5
#16 0x00007f141cfe42e1 in QTimerInfoList::activateTimers() () from /usr/lib64/libQt5Core.so.5
#17 0x00007f141cfe4bbc in timerSourceDispatch(_GSource*, int (*)(void*), void*) () from /usr/lib64/libQt5Core.so.5
#18 0x00007f141af51faf in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#19 0x00007f141afa72c8 in g_main_context_iterate.constprop () from /usr/lib64/libglib-2.0.so.0
#20 0x00007f141af4f940 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#21 0x00007f141cfe4f5a in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#22 0x00007f141cf92c7a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#23 0x00007f141cf9ad42 in QCoreApplication::exec() () from /usr/lib64/libQt5Core.so.5
#24 0x000000000040ddfd in ?? ()
#25 0x0000000000000001 in ?? ()
#26 0x00007f141c150d30 in ?? ()
#27 0x00007f141fc940e0 in ?? () at /data/KDE/src/kde/utilities/kate/apps/lib/kateapp.cpp:623 from /data/KDE/install/qt5/lib64/libkateprivate.so.22.11.70
#28 0x0000000000000000 in ?? ()
Comment 1 Allen Winter 2022-07-31 15:01:57 UTC
Note that after I restart kate and open the session containing the python file, kate asks me to recover the data for that python file.  If I do that of course kate crashes again in the same way
Comment 2 Allen Winter 2022-07-31 15:02:55 UTC
no crash when recovering the python file in kate Version 22.04.1
Comment 3 Waqar Ahmed 2022-08-11 12:24:18 UTC
Git commit a5117f611a82ecfb12860a6309a2996c1b363df0 by Waqar Ahmed.
Committed on 11/08/2022 at 12:23.
Pushed by waqar into branch 'master'.

Fix out of bound string access

M  +4    -1    addons/symbolviewer/python_parser.cpp

https://invent.kde.org/utilities/kate/commit/a5117f611a82ecfb12860a6309a2996c1b363df0