Fix out of bound string access

BUG: 457344